# ow2-server-picker

./: .gitignore  Cargo.toml  build.rs  justfile  rust-toolchain.toml  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
resources/: dropship-rs.exe.manifest
src/: daemon.rs  main.rs  modal.rs  ping.rs  prefixes.rs  regions.rs  widgets.rs
src/fw/: linux.rs  windows.rs
src/fw/linux/: cgroup.rs
