[package]
name = "ow2-server-picker"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5", features = ["derive"] }
cliclack = "0.3.6"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
directories = "6.0.0"
eframe = { version = "0.31.1", features = ["wayland"] }
egui_taffy = "0.7.0"
indicatif = { version = "0.17.11", features = ["tokio"] }
ipnetwork = "0.21.1"
iter_tools = "0.29.0"
notify-rust = "4.11.7"
reqwest = { version = "0.12", features = ["json"] }
rfd = { version = "0.15", default-features = false, features = [
    "tokio",
    "xdg-portal",
] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
mnl = { version = "0.2", features = ["mnl-1-0-4"] }
nftnl = { version = "0.7", features = ["nftnl-1-1-2"] }
nix = { version = "0.30", features = ["mount"] }
caps = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_NetworkManagement_WindowsFirewall",
    "Data_Xml_Dom",
    "ApplicationModel",
] }

[build-dependencies]
embed-manifest = "1.3.1"

[profile.production]
inherits = "release"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
